--- a/TareaPDT_JSF/WebContent/WEB-INF/web.xml
+++ b/TareaPDT_JSF/WebContent/WEB-INF/web.xml
@@ -24,4 +24,8 @@
   <servlet-name>Faces Servlet</servlet-name>
   <url-pattern>/faces/*</url-pattern>
  </servlet-mapping>
+  <servlet-mapping>
+ <servlet-name>javax.ws.rs.core.Application</servlet-name>
+ <url-pattern>/rest/*</url-pattern>
+ </servlet-mapping>
 </web-app>
