--- a/PDT/.classpath
+++ b/PDT/.classpath
@@ -4,14 +4,16 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly 17.0 Runtime">
 		<attributes>
-			<attribute name="owner.project.facets" value="#system#;jpt.jpa;jst.ejb"/>
+			<attribute name="owner.project.facets" value="jpt.jpa;#system#;jst.ejb"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jboss-client.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_251">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Juani/Desktop/UTEC/Aplicaciones Web/wildfly-17.0.0.Final/modules/system/layers/base/org/hibernate/main/hibernate-core-5.3.10.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juani/Desktop/UTEC/Aplicaciones Web/wildfly-17.0.0.Final/bin/client/jboss-cli-client.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Juani/Desktop/UTEC/Aplicaciones Web/wildfly-17.0.0.Final/bin/client/jboss-client.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
