--- a/TareaPDT_JSF/.project
+++ b/TareaPDT_JSF/.project
@@ -4,7 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>PDT</project>
-		<project>TareaPDT_EAR</project>
+		<project>ProyectoEAR</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
